--- a/app/src/main/res/layout/fragment_practice.xml
+++ b/app/src/main/res/layout/fragment_practice.xml
@@ -7,8 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <!-- 顶部轮播图 -->
         <androidx.viewpager2.widget.ViewPager2
@@ -36,21 +35,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- 底部长文字段落 -->
-        <TextView
-            android:id="@+id/longText"
+        <!-- 题目分类列表 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerCategories"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:textSize="16sp"
-            android:textColor="#333333"
-            android:text="这里是很多很多段长文字……\n\n段落1...\n\n段落2...\n\n段落3...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4...\n\n段落4..."
             app:layout_constraintTop_toBottomOf="@id/recyclerHorizontal"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- 自定义刷题按钮 -->
+        <!-- 自定义刷题按钮 -->
+        <Button
+            android:id="@+id/btnCustomQuiz"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="自定义刷题"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_rounded_button_blue"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:paddingVertical="12dp"
+            app:layout_constraintTop_toBottomOf="@id/recyclerCategories"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
