--- a/app/src/main/res/layout/activity_mock_exam_result.xml
+++ b/app/src/main/res/layout/activity_mock_exam_result.xml
@@ -149,6 +149,7 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
+                android:id="@+id/layoutSummaryRow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -248,6 +249,109 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardAiComment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="4dp"
+                app:layout_constraintTop_toBottomOf="@id/layoutSummaryRow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:id="@+id/ivAiTitle"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/logonew2"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"/>
+
+                    <TextView
+                        android:id="@+id/tvAiTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="鸭局长点评"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:textColor="#111827"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@id/ivAiTitle"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <ProgressBar
+                        android:id="@+id/pbAiCommentLoading"
+                        style="?android:attr/progressBarStyleSmall"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:indeterminate="true"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/tvAiTitle"
+                        app:layout_constraintBottom_toBottomOf="@id/tvAiTitle"/>
+
+                    <LinearLayout
+                        android:id="@+id/llAiSkeleton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        app:layout_constraintTop_toBottomOf="@id/tvAiTitle"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent">
+
+                        <View
+                            android:id="@+id/skeletonLine1"
+                            android:layout_width="match_parent"
+                            android:layout_height="12dp"
+                            android:background="@drawable/bg_skeleton_line"/>
+
+                        <View
+                            android:id="@+id/skeletonLine2"
+                            android:layout_width="match_parent"
+                            android:layout_height="12dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_skeleton_line"/>
+
+                        <View
+                            android:id="@+id/skeletonLine3"
+                            android:layout_width="match_parent"
+                            android:layout_height="12dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_skeleton_line"/>
+
+                        <View
+                            android:id="@+id/skeletonLine4"
+                            android:layout_width="220dp"
+                            android:layout_height="12dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/bg_skeleton_line"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tvAiComment"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="（点评内容）"
+                        android:textSize="14sp"
+                        android:textColor="#374151"
+                        android:lineSpacingExtra="4dp"
+                        android:visibility="gone"
+                        app:layout_constraintTop_toBottomOf="@id/tvAiTitle"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
